--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Imperial Gems</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <div class="container-hero">
         <div class="container hero">
@@ -25,6 +25,13 @@
             </div>
 
             <div class="container-user">
+                <button type="button" class="btn btn-primary position-relative">
+                    Mensajes
+                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                        0
+                        <span class="visually-hidden">unread messages</span>
+                    </span>
+                </button>
                 <i class="fa-solid fa-user"></i>
                 <i class="fa-solid fa-basket-shopping"></i>
                 <div class="content-shopping-cart">
@@ -86,6 +93,7 @@
 </head>
 
 <body>
+<br>
 
     <style>
         .carousel-inner img {
@@ -106,7 +114,7 @@
         }
     </style>
 
-
+    
 
     <div id="carouselExampleDark" class="carousel carousel-dark slide">
         <div class="carousel-indicators">
@@ -158,69 +166,49 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-
-
-
-    <div class="card" style="width: 18rem;">
-        <img src="/product/1.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Aretes Flor de Diamante en Oro Rosado</h5>
-            <p class="card-text">Estos deslumbrantes aretes en forma de flor cuentan con pétalos de oro rosado y un
-                centro de brillantes diamantes. Su diseño sofisticado los convierte en el complemento perfecto para
-                ocasiones especiales o para añadir un toque de lujo a tu día a día.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+<br>
+    <section class="banner">
+        <div class="content-banner">
+            <p>Las mejores joyas</p>
+            <h2>Al mejor precio <br />Envios a cualquier parte del mundo</h2>
+            <a href="catalago.html">Ver catalogos</a>
         </div>
-    </div>
-
-    <div class="div">
-        <div class="card" style="width: 18rem;">
-            <img src="/product/2.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Moneda de Oro Clásica del Rey Jorge V – Edición Coleccionista</h5>
-                <p class="card-text">Adquiere esta emblemática moneda de oro, una auténtica pieza de historia que
-                    destaca por su diseño elegante y su inconfundible retrato del Rey Jorge V. Fabricada con precisión y
-                    detalles exquisitos, esta moneda es perfecta para coleccionistas, inversores y amantes de la
-                    numismática. Su acabado brillante y su alto contenido en oro la convierten en un símbolo de valor y
-                    tradición. ¡Asegura la tuya y añade un toque de distinción a tu colección!</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+    </section>
+    <section class="container container-features">
+        <div class="card-feature">
+            <i class="fa-solid fa-plane-up"></i>
+            <div class="feature-content">
+                <span>Envío gratuito a nivel mundial</span>
+                <p>En pedido superior a Lps 1,000.00 ($50)</p>
             </div>
         </div>
-    </div>
-
-    <div class="div">
-        <div class="card" style="width: 18rem;">
-            <img src="/product/3.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Moneda de Oro con Diseño de Divinidad Hindú – Arte y Espiritualidad</h5>
-                <p class="card-text">Descubre esta extraordinaria moneda de oro, una obra maestra que combina el arte y
-                    la espiritualidad. Con un intrincado grabado de una divinidad hindú, esta pieza simboliza la riqueza
-                    cultural y el misticismo de la tradición india. Elaborada con precisión en oro puro, esta moneda es
-                    ideal para coleccionistas y para quienes buscan un símbolo de prosperidad y buena fortuna. Un
-                    artículo único que trasciende lo material para conectar con lo sagrado. ¡Hazla parte de tu colección
-                    ahora!</p>
+        <div class="card-feature">
+            <i class="fa-solid fa-wallet"></i>
+            <div class="feature-content">
+                <span>Contrareembolso</span>
+                <p>100% garantía de devolución de dinero</p>
             </div>
         </div>
-
-<div class="contenedor">
-           <div class="wrapper">
-            <img class="derecha" src="product/4.jpg" alt="">
-            <div class="text-box">
-                <h2>
-                    Moneda de Oro con Grabado de Vishnu en Ananta Shesha – Símbolo de Protección y Eternidad
-                </h2>
-                <p>
-                    Celebra la espiritualidad y el arte con esta moneda de oro de exquisito diseño, que representa al
-                    Señor Vishnu descansando sobre Ananta Shesha, la serpiente cósmica. Un símbolo de protección,
-                    eternidad y creación, esta pieza única está elaborada en oro puro con detalles minuciosamente
-                    grabados que reflejan su significado divino. Perfecta para coleccionistas, devotos y amantes de la
-                    cultura hindú, esta moneda es más que un tesoro, es una conexión con lo eterno. ¡Adquiérela ahora y
-                    enriquece tu colección!
-                </p>
+        <div class="card-feature">
+            <i class="fa-solid fa-gift"></i>
+            <div class="feature-content">
+                <span>Tarjeta regalo especial</span>
+                <p>Ofrece bonos especiales con regalo</p>
             </div>
         </div>
+        <div class="card-feature">
+            <i class="fa-solid fa-headset"></i>
+            <div class="feature-content">
+                <span>Servicio al cliente 24/7</span>
+                <p>LLámenos 24/7 +504 9667-7273</p>
+            </div>
+        </div>
+    </section>
 
-    </div>
- 
+
+    <main class="main-content">
+
+
 
         <nav aria-label="...">
             <ul class="pagination">
@@ -240,88 +228,135 @@
 
 
 
-        <footer class="footer">
-            <div class="container container-footer">
-                <div class="menu-footer">
-                    <div class="contact-info">
-                        <p class="title-footer">Información de Contacto</p>
-                        <ul>
-                            <li>
-                                Dirección: Danlí, El Paraíso, Honduras.
-                            </li>
-                            <li>Teléfono: + 504 9667-7273</li>
-                            <li>Fax: xxxxxx</li>
-                            <li>EmaiL: ImperialGems@support.com</li>
-                        </ul>
-                        <div class="social-icons">
-                            <span class="facebook">
-                                <i class="fa-brands fa-facebook-f"></i>
-                            </span>
-                            <span class="twitter">
-                                <i class="fa-brands fa-twitter"></i>
-                            </span>
-                            <span class="youtube">
-                                <i class="fa-brands fa-youtube"></i>
-                            </span>
-                            <span class="pinterest">
-                                <i class="fa-brands fa-pinterest-p"></i>
-                            </span>
-                            <span class="instagram">
-                                <i class="fa-brands fa-instagram"></i>
-                            </span>
-                        </div>
-                    </div>
+        <div class="card" style="width: 18rem;">
+            <img src="/product/1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Aretes Flor de Diamante en Oro Rosado</h5>
+                <p class="card-text">Estos deslumbrantes aretes en forma de flor cuentan con pétalos de oro rosado y un
+                    centro de brillantes diamantes. Su diseño sofisticado los convierte en el complemento perfecto para
+                    ocasiones especiales o para añadir un toque de lujo a tu día a día.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
 
-                    <div class="information">
-                        <p class="title-footer">Información</p>
-                        <ul>
-                            <li><a href="#">Acerca de Nosotros</a></li>
-                            <li><a href="#">Información Delivery</a></li>
-                            <li><a href="#">Politicas de Privacidad</a></li>
-                            <li><a href="#">Términos y condiciones</a></li>
-                            <li><a href="#">Contactános</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="my-account">
-                        <p class="title-footer">Mi cuenta</p>
-
-                        <ul>
-                            <li><a href="#">Mi cuenta</a></li>
-                            <li><a href="#">Historial de ordenes</a></li>
-                            <li><a href="#">Lista de deseos</a></li>
-                            <li><a href="#">Boletín</a></li>
-                            <li><a href="#">Reembolsos</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="newsletter">
-                        <p class="title-footer">Boletín informativo</p>
-
-                        <div class="content">
-                            <p>
-                                Suscríbete a nuestra pagina ahora y mantente al
-                                día con nuevas colecciones y ofertas exclusivas.
-                            </p>
-                            <input type="email" placeholder="Ingresa el correo aquí...">
-                            <button>Suscríbete</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="copyright">
-                    <p>
-                        Desarrollado por Alex &copy; 2025. Todos los derechos reservados.
-                    </p>
-
-                    <img src="img/payment.png" alt="Pagos">
+        <div class="div">
+            <div class="card" style="width: 18rem;">
+                <img src="/product/2.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Moneda de Oro Clásica del Rey Jorge V – Edición Coleccionista</h5>
+                    <p class="card-text">Adquiere esta emblemática moneda de oro, una auténtica pieza de historia que
+                        destaca por su diseño elegante y su inconfundible retrato del Rey Jorge V. Fabricada con
+                        precisión y
+                        detalles exquisitos, esta moneda es perfecta para coleccionistas, inversores y amantes de la
+                        numismática. Su acabado brillante y su alto contenido en oro la convierten en un símbolo de
+                        valor y
+                        tradición. ¡Asegura la tuya y añade un toque de distinción a tu colección!</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
-        </footer>
-        <script src="https://kit.fontawesome.com/81581fb069.js" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+        </div>
+
+        <div class="div">
+            <div class="card" style="width: 18rem;">
+                <img src="/product/3.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Moneda de Oro con Diseño de Divinidad Hindú – Arte y Espiritualidad</h5>
+                    <p class="card-text">Descubre esta extraordinaria moneda de oro, una obra maestra que combina el
+                        arte y
+                        la espiritualidad. Con un intrincado grabado de una divinidad hindú, esta pieza simboliza la
+                        riqueza
+                        cultural y el misticismo de la tradición india. Elaborada con precisión en oro puro, esta moneda
+                        es
+                        ideal para coleccionistas y para quienes buscan un símbolo de prosperidad y buena fortuna. Un
+                        artículo único que trasciende lo material para conectar con lo sagrado. ¡Hazla parte de tu
+                        colección
+                        ahora!</p>
+                </div>
+            </div>
+
+
+            <footer class="footer">
+                <div class="container container-footer">
+                    <div class="menu-footer">
+                        <div class="contact-info">
+                            <p class="title-footer">Información de Contacto</p>
+                            <ul>
+                                <li>
+                                    Dirección: Danlí, El Paraíso, Honduras.
+                                </li>
+                                <li>Teléfono: + 504 9667-7273</li>
+                                <li>Fax: xxxxxx</li>
+                                <li>EmaiL: ImperialGems@support.com</li>
+                            </ul>
+                            <div class="social-icons">
+                                <span class="facebook">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </span>
+                                <span class="twitter">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </span>
+                                <span class="youtube">
+                                    <i class="fa-brands fa-youtube"></i>
+                                </span>
+                                <span class="pinterest">
+                                    <i class="fa-brands fa-pinterest-p"></i>
+                                </span>
+                                <span class="instagram">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="information">
+                            <p class="title-footer">Información</p>
+                            <ul>
+                                <li><a href="#">Acerca de Nosotros</a></li>
+                                <li><a href="#">Información Delivery</a></li>
+                                <li><a href="#">Politicas de Privacidad</a></li>
+                                <li><a href="#">Términos y condiciones</a></li>
+                                <li><a href="#">Contactános</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="my-account">
+                            <p class="title-footer">Mi cuenta</p>
+
+                            <ul>
+                                <li><a href="#">Mi cuenta</a></li>
+                                <li><a href="#">Historial de ordenes</a></li>
+                                <li><a href="#">Lista de deseos</a></li>
+                                <li><a href="#">Boletín</a></li>
+                                <li><a href="#">Reembolsos</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="newsletter">
+                            <p class="title-footer">Boletín informativo</p>
+
+                            <div class="content">
+                                <p>
+                                    Suscríbete a nuestra pagina ahora y mantente al
+                                    día con nuevas colecciones y ofertas exclusivas.
+                                </p>
+                                <input type="email" placeholder="Ingresa el correo aquí...">
+                                <button>Suscríbete</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="copyright">
+                        <p>
+                            Desarrollado por Alex &copy; 2025. Todos los derechos reservados.
+                        </p>
+
+                        <img src="img/payment.png" alt="Pagos">
+                    </div>
+                </div>
+            </footer>
+            <script src="https://kit.fontawesome.com/81581fb069.js" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                crossorigin="anonymous"></script>
 
 </body>
 
